Change Flex to Grid in Travel Section

--- a/index.html
+++ b/index.html
@@ -65,15 +65,18 @@
             <source src="./Assets/Media/Desert.mp4" type="video/mp4">
         </video>
         <!-- Call out -->
-  <div class="call">
+        <div class="call">
             <img class="call--img" id="call-image" src="./Assets/Media/zen.png" alt="Pozos Azules">
             <h1 class="call--title">Hi! I'm Mo the Traveler</h1>
-            <p class="call--par">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Animi explicabo error corrupti eveniet ipsa doloremque atque placeat, optio delectus consequatur repellat et illo dolorem nesciunt dolores corporis veritatis, nisi totam.</p>
+            <p class="call--par">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Animi explicabo error
+                corrupti eveniet ipsa doloremque atque placeat, optio delectus consequatur repellat et illo dolorem
+                nesciunt dolores corporis veritatis, nisi totam.</p>
             <a class="call--button" href="./Pages/travel.html">Travel Tips</a>
-        </div> 
+        </div>
     </main>
     <!-- (h2#sec${Mi Título $}+section.section.sec$)*4 -->
     <h2 id="sec1"><a href="./Pages/About.html">About Me</a></h2>
+    <!--SECTION 1 ABOUT ME-->
     <section class="about-section1">
         <div>
             <img src="./Assets/Media/Mercy.png" style="filter:sepia(60%)" class="profile-img">
@@ -84,49 +87,28 @@
                 Sit quos similique magni?</p>
         </div>
     </section>
+    <!--SECTION 2 TRAVEL TIPS-->
     <h2 id="sec2">Travel Tips</h2>
     <section class="sec2-travel">
         <div class="sec2-travel-video">
-            <a href="./Pages/travel.html">
-                <video id="travel-vid" src="./Assets/Media/Prague.MP4" autoplay loop muted></video>
-            </a>
-            <a href="./Pages/travel.html">
-                <h1>Lorem</h1>
-            </a>
-            <a href="./Pages/travel.html">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt tempore, dicta quas enim provident ut,
+            <a href="./Pages/travel.html"><video id="sec2-travel-vid-tip1" src="./Assets/Media/Prague.MP4" autoplay loop muted></video></a>
+            <a id="sec2-travel-title-tip1" href="./Pages/travel.html"><h1 >Lorem 1</h1></a>
+            <a id="sec2-travel-text-tip1" href="./Pages/travel.html"><p > Lorem ipsum dolor sit amet consectetur
+                adipisicing elit. Sunt tempore, dicta quas enim provident ut,
+                dolorem qui impedit est optio eligendi vitae. Veritatis nostrum voluptatibus id perferendis quia
+                obcaecati vel.</p></a>
+            <a href="./Pages/travel.html"><video id="sec2-travel-vid-tip2" src="./Assets/Media/Venecia.MP4" autoplay loop muted></video></a>
+            <a id="sec2-travel-title-tip2" href="./Pages/travel.html"><h1>Lorem 2</h1></a>
+            <a id="sec2-travel-text-tip2" href="./Pages/travel.html"> <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt tempore, dicta quas enim provident ut,
                     dolorem qui impedit est optio eligendi vitae. Veritatis nostrum voluptatibus id perferendis quia
-                    obcaecati vel.</p>
-            </a>
-        </div>
-        <div class="sec2-travel-video">
-            <a href="./Pages/travel.html">
-                <video id="travel-vid" src="./Assets/Media/Venecia.MP4" autoplay loop muted></video>
-            </a>
-            <a href="./Pages/travel.html">
-                <h1>Lorem</h1>
-            </a>
-            <a href="./Pages/travel.html">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt tempore, dicta quas enim provident ut,
+                    obcaecati vel.</p></a>
+            <a href="./Pages/travel.html"><video id="sec2-travel-vid-tip3" src="./Assets/Media/Italy2.MP4" autoplay loop muted></video></a>
+            <a id="sec2-travel-title-tip3" href="./Pages/travel.html"><h1>Lorem 3</h1></a>
+            <a id="sec2-travel-text-tip3" href="./Pages/travel.html"><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt tempore, dicta quas enim provident ut,
                     dolorem qui impedit est optio eligendi vitae. Veritatis nostrum voluptatibus id perferendis quia
-                    obcaecati vel.</p>
-            </a>
-        </div>
-        <div class="sec2-travel-video">
-            <a href="./Pages/travel.html">
-                <video id="travel-vid" src="./Assets/Media/Italy2.MP4" autoplay loop muted></video>
-            </a>
-            <a href="./Pages/travel.html">
-                <h1>Lorem</h1>
-            </a>
-            <a href="./Pages/travel.html">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt tempore, dicta quas enim provident ut,
-                    dolorem qui impedit est optio eligendi vitae. Veritatis nostrum voluptatibus id perferendis quia
-                    obcaecati vel.</p>
-            </a>
-        </div>
-
+                    obcaecati vel.</p></a>
     </section>
+    <!--SECTION 3 GALLERY-->
     <h2 id="sec3"><a href="./Pages/gallery.html">Gallery</a></h2>
     <section class="sec3-gallery">
         <!-- Complete Carousel Start -->
@@ -197,7 +179,7 @@
         </div>
         <!-- Complete Carousel Start -->
     </section>
-    <!-- Contact me Start -->
+    <!--SECTION 4 CONTACT ME START-->
     <h2 id="sec4"><a href="./Pages/contact.html">Contact Me</a></h2>
     <section class="sec4-contact">
         <a href="./Pages/contact.html">
@@ -230,6 +212,7 @@
             </div>
         </a>
     </section>
+    <!--FOOTER-->
     <footer>
         <div class="redes">
             <a href="https://www.instagram.com/mercymolano?utm_source=qr">
@@ -241,9 +224,8 @@
         </div>
         <p>© 2023 All rights reserved</p>
     </footer>
+    <!--GO BACK UP BUTTON-->
     <a href="#" class="up"><i class="fa-solid fa-angle-up"></i></a>
-
-
 
     <!--Scripts BS Start-->
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
