media query for travel tips

--- a/index.html
+++ b/index.html
@@ -79,10 +79,10 @@
     <!--SECTION 1 ABOUT ME-->
     <section class="about-section1">
         <div>
-            <img src="./Assets/Media/Mercy.png" style="filter:sepia(60%)" class="profile-img">
+            <img src="./Assets/Media/Mercy.png" style="filter:sepia(60%)" class="profile-img about-section1--img">
             <h1>Hi, I'm Mo the Traveler.</h1>
             <h3 id="sec1-button"><a href="./Pages/About.html">My Story</a></h3>
-            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptates exercitationem deleniti quo est
+            <p class="sec1-text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptates exercitationem deleniti quo est
                 nihil? Deserunt assumenda maxime maiores expedita ducimus corporis unde facilis similique mollitia nisi.
                 Sit quos similique magni?</p>
         </div>
