--- a/Pages/contact.html
+++ b/Pages/contact.html
@@ -26,8 +26,8 @@
         <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
             <!--Logo Start-->
             <div class="container-fluid">
-                <a class="navbar-brand" href="../index.html"><img class="navbar-brand-img" src="../Assets/Media/MercyLogo.png"
-                        alt=""></a>
+                <a class="navbar-brand" href="../index.html"><img class="navbar-brand-img"
+                        src="../Assets/Media/MercyLogo.png" alt=""></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#collapsibleNavbar">
                     <span class="navbar-toggler-icon"></span>
@@ -69,29 +69,55 @@
         <h1 class="h-primary">
             Feel free to ask my any question about my travels, blog or if you have any business inquires.
         </h1>
-        <div class="contact-card">
-            <i class="fa-solid fa-pen-nib"></i>
-            <!-- <h2>Online Form</h2> -->
-            <form class="form" id="form-null">
-                <div class="form-field">
-                    <input type="text" id="form-name" class="form-input" placeholder="Name*" required=""
-                        style="border-color:#463f36;background-color:rgba(34, 42, 47, 0.12);--w-get-input-background-color:rgba(34, 42, 47, 0.12)"
-                        value="" maxlength="2000">
+        <div class="container py-4">
+
+            <!-- Bootstrap 5 starter form -->
+            <form id="contactForm" data-sb-form-api-token="API_TOKEN">
+
+                <!-- Name input -->
+                <div class="mb-3">
+                    <label class="form-label" for="name">Name</label>
+                    <input class="form-control" id="name" type="text" placeholder="Name"
+                        data-sb-validations="required" />
+                    <div class="invalid-feedback" data-sb-feedback="name:required">Name is required.</div>
                 </div>
-                <div class="form-field">
-                    <input type="email" id="form-email" class="form-input" placeholder="E-mail*" required=""
-                        style="border-color:#463f36;background-color:rgba(34, 42, 47, 0.12);--w-get-input-background-color:rgba(34, 42, 47, 0.12)"
-                        value="" maxlength="2000">
+
+                <!-- Email address input -->
+                <div class="mb-3">
+                    <label class="form-label" for="emailAddress">Email Address</label>
+                    <input class="form-control" id="emailAddress" type="email" placeholder="Email Address"
+                        data-sb-validations="required, email" />
+                    <div class="invalid-feedback" data-sb-feedback="emailAddress:required">Email Address is required.
+                    </div>
+                    <div class="invalid-feedback" data-sb-feedback="emailAddress:email">Email Address Email is not
+                        valid.</div>
                 </div>
-                <div class="form-field">
-                    <input type="text" id="from-message" class="form-input" placeholder="Your message"
-                        style="border-color:#463f36;background-color:rgba(34, 42, 47, 0.12);--w-get-input-background-color:rgba(34, 42, 47, 0.12)"
-                        value="" maxlength="2000">
+
+                <!-- Message input -->
+                <div class="mb-3">
+                    <label class="form-label" for="message">Message</label>
+                    <textarea class="form-control" id="message" type="text" placeholder="Message" style="height: 10rem;"
+                        data-sb-validations="required"></textarea>
+                    <div class="invalid-feedback" data-sb-feedback="message:required">Message is required.</div>
                 </div>
-                <button type="submit" class="form-button">
-                    Submit
-                </button>
+
+                <!-- Form submissions success message -->
+                <div class="d-none" id="submitSuccessMessage">
+                    <div class="text-center mb-3">Form submission successful!</div>
+                </div>
+
+                <!-- Form submissions error message -->
+                <div class="d-none" id="submitErrorMessage">
+                    <div class="text-center text-danger mb-3">Error sending message!</div>
+                </div>
+
+                <!-- Form submit button -->
+                <div class="d-grid">
+                    <button class="btn btn-primary btn-lg" id="submitButton" type="submit">Submit</button>
+                </div>
+
             </form>
+
         </div>
     </section>
     <footer>
