--- a/index.html
+++ b/index.html
@@ -82,7 +82,8 @@
             <img src="./Assets/Media/Mercy.png" style="filter:sepia(60%)" class="profile-img about-section1--img">
             <h1>Hi, I'm Mo the Traveler.</h1>
             <h3 id="sec1-button"><a href="./Pages/About.html">My Story</a></h3>
-            <p class="sec1-text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptates exercitationem deleniti quo est
+            <p class="sec1-text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptates exercitationem
+                deleniti quo est
                 nihil? Deserunt assumenda maxime maiores expedita ducimus corporis unde facilis similique mollitia nisi.
                 Sit quos similique magni?</p>
         </div>
@@ -91,22 +92,37 @@
     <h2 id="sec2">Travel Tips</h2>
     <section class="sec2-travel">
         <div class="sec2-travel-video">
-            <a href="./Pages/travel.html"><video id="sec2-travel-vid-tip1" src="./Assets/Media/Prague.MP4" autoplay loop muted></video></a>
-            <a id="sec2-travel-title-tip1" href="./Pages/travel.html"><h1 >Lorem 1</h1></a>
-            <a id="sec2-travel-text-tip1" href="./Pages/travel.html"><p > Lorem ipsum dolor sit amet consectetur
-                adipisicing elit. Sunt tempore, dicta quas enim provident ut,
-                dolorem qui impedit est optio eligendi vitae. Veritatis nostrum voluptatibus id perferendis quia
-                obcaecati vel.</p></a>
-            <a href="./Pages/travel.html"><video id="sec2-travel-vid-tip2" src="./Assets/Media/Venecia.MP4" autoplay loop muted></video></a>
-            <a id="sec2-travel-title-tip2" href="./Pages/travel.html"><h1>Lorem 2</h1></a>
-            <a id="sec2-travel-text-tip2" href="./Pages/travel.html"> <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt tempore, dicta quas enim provident ut,
+            <a href="./Pages/travel.html"><video id="sec2-travel-vid-tip1" src="./Assets/Media/Prague.MP4" autoplay loop
+                    muted></video></a>
+            <a id="sec2-travel-title-tip1" href="./Pages/travel.html">
+                <h1>Lorem 1</h1>
+            </a>
+            <a id="sec2-travel-text-tip1" href="./Pages/travel.html">
+                <p> Lorem ipsum dolor sit amet consectetur
+                    adipisicing elit. Sunt tempore, dicta quas enim provident ut,
                     dolorem qui impedit est optio eligendi vitae. Veritatis nostrum voluptatibus id perferendis quia
-                    obcaecati vel.</p></a>
-            <a href="./Pages/travel.html"><video id="sec2-travel-vid-tip3" src="./Assets/Media/Italy2.MP4" autoplay loop muted></video></a>
-            <a id="sec2-travel-title-tip3" href="./Pages/travel.html"><h1>Lorem 3</h1></a>
-            <a id="sec2-travel-text-tip3" href="./Pages/travel.html"><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt tempore, dicta quas enim provident ut,
+                    obcaecati vel.</p>
+            </a>
+            <a href="./Pages/travel.html"><video id="sec2-travel-vid-tip2" src="./Assets/Media/Venecia.MP4" autoplay
+                    loop muted></video></a>
+            <a id="sec2-travel-title-tip2" href="./Pages/travel.html">
+                <h1>Lorem 2</h1>
+            </a>
+            <a id="sec2-travel-text-tip2" href="./Pages/travel.html">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt tempore, dicta quas enim provident ut,
                     dolorem qui impedit est optio eligendi vitae. Veritatis nostrum voluptatibus id perferendis quia
-                    obcaecati vel.</p></a>
+                    obcaecati vel.</p>
+            </a>
+            <a href="./Pages/travel.html"><video id="sec2-travel-vid-tip3" src="./Assets/Media/Italy2.MP4" autoplay loop
+                    muted></video></a>
+            <a id="sec2-travel-title-tip3" href="./Pages/travel.html">
+                <h1>Lorem 3</h1>
+            </a>
+            <a id="sec2-travel-text-tip3" href="./Pages/travel.html">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt tempore, dicta quas enim provident ut,
+                    dolorem qui impedit est optio eligendi vitae. Veritatis nostrum voluptatibus id perferendis quia
+                    obcaecati vel.</p>
+            </a>
     </section>
     <!--SECTION 3 GALLERY-->
     <h2 id="sec3"><a href="./Pages/gallery.html">Gallery</a></h2>
@@ -186,31 +202,58 @@
             <h1 class="h-primary">
                 Feel free to ask my any question about my travels, blog or if you have any business inquires.
             </h1>
-            <div class="contact-card">
-                <i class="fa-solid fa-pen-nib"></i>
-                <!-- <h2>Online Form</h2> -->
-                <form class="form" id="form-null">
-                    <div class="form-field">
-                        <input type="text" id="form-name" class="form-input" placeholder="Name*" required=""
-                            style="border-color:#463f36;background-color:rgba(34, 42, 47, 0.12);--w-get-input-background-color:rgba(34, 42, 47, 0.12)"
-                            value="" maxlength="2000">
-                    </div>
-                    <div class="form-field">
-                        <input type="email" id="form-email" class="form-input" placeholder="E-mail*" required=""
-                            style="border-color:#463f36;background-color:rgba(34, 42, 47, 0.12);--w-get-input-background-color:rgba(34, 42, 47, 0.12)"
-                            value="" maxlength="2000">
-                    </div>
-                    <div class="form-field">
-                        <input type="text" id="from-message" class="form-input" placeholder="Your message"
-                            style="border-color:#463f36;background-color:rgba(34, 42, 47, 0.12);--w-get-input-background-color:rgba(34, 42, 47, 0.12)"
-                            value="" maxlength="2000">
-                    </div>
-                    <button type="submit" class="form-button">
-                        Submit
-                    </button>
-                </form>
-            </div>
         </a>
+        <!-- Wrapper container -->
+        <div class="container py-4">
+
+            <!-- Bootstrap 5 starter form -->
+            <form id="contactForm" data-sb-form-api-token="API_TOKEN">
+
+                <!-- Name input -->
+                <div class="mb-3">
+                    <label class="form-label" for="name">Name</label>
+                    <input class="form-control" id="name" type="text" placeholder="Name"
+                        data-sb-validations="required" />
+                    <div class="invalid-feedback" data-sb-feedback="name:required">Name is required.</div>
+                </div>
+
+                <!-- Email address input -->
+                <div class="mb-3">
+                    <label class="form-label" for="emailAddress">Email Address</label>
+                    <input class="form-control" id="emailAddress" type="email" placeholder="Email Address"
+                        data-sb-validations="required, email" />
+                    <div class="invalid-feedback" data-sb-feedback="emailAddress:required">Email Address is required.
+                    </div>
+                    <div class="invalid-feedback" data-sb-feedback="emailAddress:email">Email Address Email is not
+                        valid.</div>
+                </div>
+
+                <!-- Message input -->
+                <div class="mb-3">
+                    <label class="form-label" for="message">Message</label>
+                    <textarea class="form-control" id="message" type="text" placeholder="Message" style="height: 10rem;"
+                        data-sb-validations="required"></textarea>
+                    <div class="invalid-feedback" data-sb-feedback="message:required">Message is required.</div>
+                </div>
+
+                <!-- Form submissions success message -->
+                <div class="d-none" id="submitSuccessMessage">
+                    <div class="text-center mb-3">Form submission successful!</div>
+                </div>
+
+                <!-- Form submissions error message -->
+                <div class="d-none" id="submitErrorMessage">
+                    <div class="text-center text-danger mb-3">Error sending message!</div>
+                </div>
+
+                <!-- Form submit button -->
+                <div class="d-grid">
+                    <button class="btn btn-primary btn-lg disabled" id="submitButton" type="submit">Submit</button>
+                </div>
+
+            </form>
+
+        </div>
     </section>
     <!--FOOTER-->
     <footer>
@@ -234,6 +277,8 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.min.js"
         integrity="sha384-Rx+T1VzGupg4BHQYs2gCW9It+akI2MM/mndMCy36UVfodzcJcF0GGLxZIzObiEfa"
         crossorigin="anonymous"></script>
+    <!-- SB Forms JS for contact card -->
+    <script src="https://cdn.startbootstrap.com/sb-forms-latest.js"></script>
     <!--Scripts BS End-->
 </body>
 
