Navbar Shadow, index colors

--- a/Pages/travel.html
+++ b/Pages/travel.html
@@ -40,7 +40,7 @@
       <nav class="navbar navbar-expand-sm navbar-expand-lg">
         <div class="container-fluid">
           <a class="navbar-brand" href="#">
-            <img style="height: 50px;" src="../Assets/Media/MercyLogo.png" alt="logo"/>
+            <img style="height: 50px;" src="../Assets/Media/MerLogoB.png" alt="logo"/>
           </a>
           <button
             class="navbar-toggler"
@@ -140,7 +140,6 @@
         </div>
       </div>
     </main>
-    <br />
     <!-------Footer Start------->
 
     <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
@@ -151,9 +150,9 @@
         <span class="mb-3 mb-md-0 text-body-secondary">© 2023 All rights reserved</span>
       </div>
       <ul class="nav col-md-4 justify-content-end list-unstyled d-flex">
-        <li class="ms-3"><a class="text-body-secondary" href="#"><i class="fa-brands fa-instagram fa-beat"></i></a></li>
-        <li class="ms-3"><a class="text-body-secondary" href="https://wa.link/ycoea4"><i class="fa-brands fa-whatsapp fa-beat"></i></a></li>
-        <li class="ms-3"><a class="text-body-secondary" href="#"><i class="fa-brands fa-linkedin fa-beat"></i></a></li>
+        <li class="ms-3"><a class="text-body-secondary" href="https://www.instagram.com/mercymolano?utm_source=qr" target="_blank"><i class="fa-brands fa-instagram fa-beat"></i></a></li>
+        <li class="ms-3"><a class="text-body-secondary" href="https://wa.link/ycoea4" target="_blank"><i class="fa-brands fa-whatsapp fa-beat"></i></a></li>
+        <li class="ms-3"><a class="text-body-secondary" href="https://co.linkedin.com/in/mercymoreno" target="_blank"><i class="fa-brands fa-linkedin fa-beat"></i></a></li>
       </ul>
     </footer>
     <!-- Footer End -->
