--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
       <nav class="navbar navbar-expand-sm navbar-expand-lg">
         <div class="container-fluid">
           <a class="navbar-brand" href="#">
-            <img style="height: 50px;" src="./Assets/Media/MercyLogo.png" alt="logo"/>
+            <img style="height: 50px;" src="./Assets/Media/MerLogoB.png" alt="logo"/>
           </a>
           <button
             class="navbar-toggler"
@@ -98,20 +98,8 @@
                   </p>
                   <ul>
                     <li>
-                      <a href="#"
-                        ><img
-                          src="./Assets/Media/zen.png"
-                          class="wow fadeInUp"
-                          data-wow-delay="0.4s"
-                      /></a>
-                    </li>
-                    <li>
-                      <a href="#"
-                        ><img
-                          src="images/playstore.png"
-                          class="wow fadeInUp"
-                          data-wow-delay="0.7s"
-                      /></a>
+                      <a href="./Pages/About.html"
+                        >MY STORY</a>
                     </li>
                   </ul>
                 </div>
@@ -119,7 +107,7 @@
               <div class="col-md-4 col-sm-12">
                 <img
                   src="./Assets/Media/zen.png"
-                  class="img-fluid wow fadeInUp"
+                  class="img-fluid banner-img"
                 />
               </div>
             </div>
@@ -190,9 +178,11 @@
       <!-------Travel Tips End------->
 
 <!-------Gallery Start------->
-<section class="testimonial section-padding sec3-gallery" id="gallery">
-
-    <h2 id="sec3"><a href="./Pages/gallery.html">Gallery</a></h2>
+<section class="feature section-padding sec3-gallery" id="gallery">
+<div class="sectioner-header">
+  <h2 id="sec3"><a href="./Pages/gallery.html">Gallery</a></h2>
+</div>
+    
         <!-- Complete Carousel Start -->
         <div id="galleryC" class="carousel slide" data-bs-ride="carousel">
             <!-- Dash Start -->
@@ -428,9 +418,7 @@
             </div>
           </div>
         </div>
-      </section>
-
-      <!-------Contact End------->
+      </section><!-------Contact End------->
     </main>
 
     <!-------Footer Start------->
@@ -443,9 +431,9 @@
         <span class="mb-3 mb-md-0 text-body-secondary">© 2023 All rights reserved</span>
       </div>
       <ul class="nav col-md-4 justify-content-end list-unstyled d-flex">
-        <li class="ms-3"><a class="text-body-secondary" href="#"><i class="fa-brands fa-instagram fa-beat"></i></a></li>
-        <li class="ms-3"><a class="text-body-secondary" href="https://wa.link/ycoea4"><i class="fa-brands fa-whatsapp fa-beat"></i></a></li>
-        <li class="ms-3"><a class="text-body-secondary" href="#"><i class="fa-brands fa-linkedin fa-beat"></i></a></li>
+        <li class="ms-3"><a class="text-body-secondary" href="https://www.instagram.com/mercymolano?utm_source=qr" target="_blank"> <i class="fa-brands fa-instagram fa-beat"></i></a></li>
+        <li class="ms-3"><a class="text-body-secondary" href="https://wa.link/ycoea4" target="_blank"><i class="fa-brands fa-whatsapp fa-beat"></i></a></li>
+        <li class="ms-3"><a class="text-body-secondary" href="https://co.linkedin.com/in/mercymoreno" target="_blank"><i class="fa-brands fa-linkedin fa-beat"></i></a></li>
       </ul>
     </footer>
     <!-- Footer End -->
