Header, Footer, Banner in progress

--- a/Pages/contact.html
+++ b/Pages/contact.html
@@ -1,26 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Contact Me</title>
     <!-- Icon for title -->
-    <link rel="shortcut icon" href="../Assets/Media/Mercy.png" type="image/x-icon">
+    <link
+      rel="shortcut icon"
+      href="../Assets/Media/Mercy.png"
+      type="image/x-icon"
+    />
     <!--BS 5.3 Start-->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9"
+      crossorigin="anonymous"
+    />
     <!-- CSS -->
-    <link rel="stylesheet" href="../Assets/CSS/styles.css">
+    <link rel="stylesheet" href="../Assets/CSS/styles.css" />
     <!-- The hamburger menu for small screens -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
     <!-- Icons -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
-        integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
-        crossorigin="anonymous" referrerpolicy="no-referrer" />
-</head>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
+      integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+  </head>
 
-<body class="contactB">
+  <body class="contactB">
     <header>
       <!--BS Navbar Start-->
       <nav class="navbar navbar-expand-sm navbar-expand-lg">
@@ -59,100 +73,136 @@
         </div>
       </nav>
       <!--BS Navbar End-->
-      
     </header>
-    <br>
-    <section>
+    <main>
+      <section>
         <div class="box-main">
-            <div class="firstHalf">
-                <p class="text-big">Ask Me Anything!</p>
-            </div>
+          <div class="firstHalf">
+            <p class="text-big">Ask Me Anything!</p>
+          </div>
         </div>
-    </section>
-    <hr>
-    <section>
+      </section>
+      <section>
         <h1 class="h-primary">
-            Feel free to ask me any questions about my travels, or blog or if you have any business inquiries.
+          Feel free to ask me any questions about my travels, or blog or if you
+          have any business inquiries.
         </h1>
         <div class="container py-4">
+          <!-- Bootstrap 5 starter form -->
+          <form id="contactForm">
+            <!-- Name input -->
+            <div class="mb-3">
+              <label class="form-label" for="name">Name</label>
+              <input
+                class="form-control"
+                id="name"
+                type="text"
+                placeholder="Name"
+                data-sb-validations="required"
+              />
+              <div class="invalid-feedback" data-sb-feedback="name:required">
+                Name is required.
+              </div>
+            </div>
 
-            <!-- Bootstrap 5 starter form -->
-            <form id="contactForm" >
+            <!-- Email address input -->
+            <div class="mb-3">
+              <label class="form-label" for="emailAddress">Email Address</label>
+              <input
+                class="form-control"
+                id="emailAddress"
+                type="email"
+                placeholder="Email Address"
+                data-sb-validations="required, email"
+              />
+              <div
+                class="invalid-feedback"
+                data-sb-feedback="emailAddress:required"
+              >
+                Email Address is required.
+              </div>
+              <div
+                class="invalid-feedback"
+                data-sb-feedback="emailAddress:email"
+              >
+                Email Address Email is not valid.
+              </div>
+            </div>
 
-                <!-- Name input -->
-                <div class="mb-3">
-                    <label class="form-label" for="name">Name</label>
-                    <input class="form-control" id="name" type="text" placeholder="Name"
-                        data-sb-validations="required" />
-                    <div class="invalid-feedback" data-sb-feedback="name:required">Name is required.</div>
-                </div>
+            <!-- Message input -->
+            <div class="mb-3">
+              <label class="form-label" for="message">Message</label>
+              <textarea
+                class="form-control"
+                id="message"
+                type="text"
+                placeholder="Message"
+                style="height: 10rem"
+                data-sb-validations="required"
+              ></textarea>
+              <div class="invalid-feedback" data-sb-feedback="message:required">
+                Message is required.
+              </div>
+            </div>
 
-                <!-- Email address input -->
-                <div class="mb-3">
-                    <label class="form-label" for="emailAddress">Email Address</label>
-                    <input class="form-control" id="emailAddress" type="email" placeholder="Email Address"
-                        data-sb-validations="required, email" />
-                    <div class="invalid-feedback" data-sb-feedback="emailAddress:required">Email Address is required.
-                    </div>
-                    <div class="invalid-feedback" data-sb-feedback="emailAddress:email">Email Address Email is not
-                        valid.</div>
-                </div>
+            <!-- Form submissions success message -->
+            <div class="d-none" id="submitSuccessMessage">
+              <div class="text-center mb-3">Form submission successful!</div>
+            </div>
 
-                <!-- Message input -->
-                <div class="mb-3">
-                    <label class="form-label" for="message">Message</label>
-                    <textarea class="form-control" id="message" type="text" placeholder="Message" style="height: 10rem;"
-                        data-sb-validations="required"></textarea>
-                    <div class="invalid-feedback" data-sb-feedback="message:required">Message is required.</div>
-                </div>
+            <!-- Form submissions error message -->
+            <div class="d-none" id="submitErrorMessage">
+              <div class="text-center text-danger mb-3">
+                Error sending message!
+              </div>
+            </div>
 
-                <!-- Form submissions success message -->
-                <div class="d-none" id="submitSuccessMessage">
-                    <div class="text-center mb-3">Form submission successful!</div>
-                </div>
-
-                <!-- Form submissions error message -->
-                <div class="d-none" id="submitErrorMessage">
-                    <div class="text-center text-danger mb-3">Error sending message!</div>
-                </div>
-
-                <!-- Form submit button -->
-                <div class="d-grid">
-                    <button class="btn btn-primary btn-lg" id="submitButton" type="submit">Submit</button>
-                </div>
-
-            </form>
-
+            <!-- Form submit button -->
+            <div class="d-grid">
+              <button
+                class="btn btn-primary btn-lg"
+                id="submitButton"
+                type="submit"
+              >
+                Submit
+              </button>
+            </div>
+          </form>
         </div>
-    </section>
+      </section>
+    </main>
     <!-------Footer Start------->
-
-    <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
-        <div class="col-md-4 d-flex align-items-center">
-          <a href="/" class="mb-3 me-2 mb-md-0 text-body-secondary text-decoration-none lh-1">
-            <img src="../Assets/Media/MercyFooter.png" alt="">
-          </a>
-          <span class="mb-3 mb-md-0 text-body-secondary">© 2023 All rights reserved</span>
+    <footer>
+      <div class="container-fluid footer">
+        <div class="row justify-content-center">
+          <div class="col-3 col-sm-3 col-md-3 col-lg-3">
+            <img class="align-self-center" src="./Assets/Media/MercyFooter.png" alt="">
+          </div>
+          <div class="col-6 col-sm-6 col-md-6 col-lg-6 align-self-center">
+            © 2023 All rights reserved
+          </div>
+          <div class="col-3 col-sm-3 col-md-3 col-lg-3 align-self-center">
+            <a class="text-body-secondary" href="https://www.instagram.com/mercymolano?utm_source=qr" target="_blank"> <i class="fa-brands fa-instagram fa-beat"></i></a>
+            <a class="text-body-secondary" href="https://wa.link/ycoea4" target="_blank"><i class="fa-brands fa-whatsapp fa-beat"></i></a>
+            <a class="text-body-secondary" href="https://co.linkedin.com/in/mercymoreno" target="_blank"><i class="fa-brands fa-linkedin fa-beat"></i></a>
+          </div>
         </div>
-        <ul class="nav col-md-4 justify-content-end list-unstyled d-flex">
-          <li class="ms-3"><a class="text-body-secondary" href="https://www.instagram.com/mercymolano?utm_source=qr" target="_blank"> <i class="fa-brands fa-instagram fa-beat"></i></a></li>
-          <li class="ms-3"><a class="text-body-secondary" href="https://wa.link/ycoea4" target="_blank"><i class="fa-brands fa-whatsapp fa-beat"></i></a></li>
-          <li class="ms-3"><a class="text-body-secondary" href="https://co.linkedin.com/in/mercymoreno" target="_blank"><i class="fa-brands fa-linkedin fa-beat"></i></a></li>
-        </ul>
-      </footer>
-      <!-- Footer End -->
+      </div>
+    </footer>
+    <!-------Footer End------->
     <a href="#" class="up"><i class="fa-solid fa-angle-up"></i></a>
 
-
-
     <!--Scripts BS Start-->
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
-        integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
-        crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.min.js"
-        integrity="sha384-Rx+T1VzGupg4BHQYs2gCW9It+akI2MM/mndMCy36UVfodzcJcF0GGLxZIzObiEfa"
-        crossorigin="anonymous"></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
+      integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.min.js"
+      integrity="sha384-Rx+T1VzGupg4BHQYs2gCW9It+akI2MM/mndMCy36UVfodzcJcF0GGLxZIzObiEfa"
+      crossorigin="anonymous"
+    ></script>
     <!--Scripts BS End-->
-</body>
-
+  </body>
 </html>
