--- a/Pages/travel.html
+++ b/Pages/travel.html
@@ -141,21 +141,24 @@
       </div>
     </main>
     <!-------Footer Start------->
-
-    <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
-      <div class="col-md-4 d-flex align-items-center">
-        <a href="/" class="mb-3 me-2 mb-md-0 text-body-secondary text-decoration-none lh-1">
-          <img src="../Assets/Media/MercyFooter.png" alt="">
-        </a>
-        <span class="mb-3 mb-md-0 text-body-secondary">© 2023 All rights reserved</span>
+    <footer>
+      <div class="container-fluid footer">
+        <div class="row justify-content-center">
+          <div class="col-3 col-sm-3 col-md-3 col-lg-3">
+            <img class="align-self-center" src="./Assets/Media/MercyFooter.png" alt="">
+          </div>
+          <div class="col-6 col-sm-6 col-md-6 col-lg-6 align-self-center">
+            © 2023 All rights reserved
+          </div>
+          <div class="col-3 col-sm-3 col-md-3 col-lg-3 align-self-center">
+            <a class="text-body-secondary" href="https://www.instagram.com/mercymolano?utm_source=qr" target="_blank"> <i class="fa-brands fa-instagram fa-beat"></i></a>
+            <a class="text-body-secondary" href="https://wa.link/ycoea4" target="_blank"><i class="fa-brands fa-whatsapp fa-beat"></i></a>
+            <a class="text-body-secondary" href="https://co.linkedin.com/in/mercymoreno" target="_blank"><i class="fa-brands fa-linkedin fa-beat"></i></a>
+          </div>
+        </div>
       </div>
-      <ul class="nav col-md-4 justify-content-end list-unstyled d-flex">
-        <li class="ms-3"><a class="text-body-secondary" href="https://www.instagram.com/mercymolano?utm_source=qr" target="_blank"><i class="fa-brands fa-instagram fa-beat"></i></a></li>
-        <li class="ms-3"><a class="text-body-secondary" href="https://wa.link/ycoea4" target="_blank"><i class="fa-brands fa-whatsapp fa-beat"></i></a></li>
-        <li class="ms-3"><a class="text-body-secondary" href="https://co.linkedin.com/in/mercymoreno" target="_blank"><i class="fa-brands fa-linkedin fa-beat"></i></a></li>
-      </ul>
     </footer>
-    <!-- Footer End -->
+    <!-------Footer End------->
     <a href="#" class="up"><i class="fa-solid fa-angle-up"></i></a>
 
     <!--Scripts BS Start-->
