--- a/Pages/gallery.html
+++ b/Pages/gallery.html
@@ -21,45 +21,45 @@
 </head>
 
 <body>
-    <header>
-      <!--BS Navbar Start-->
-      <nav class="navbar navbar-expand-sm navbar-expand-lg">
-        <div class="container-fluid">
-          <a class="navbar-brand" href="#">
-            <img style="height: 50px;" src="../Assets/Media/MerLogoB.png" alt="logo"/>
-          </a>
-          <button
-            class="navbar-toggler"
-            type="button"
-            data-bs-toggle="collapse"
-            data-bs-target="#collapsibleNavbar">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-        </div>
-        <div class="container-fluid">
-            <div class="collapse navbar-collapse" id="collapsibleNavbar">
-                <ul class="navbar-nav">
-                    <li class="nav-item">
-                      <a class="nav-link" href="../index.html">Home</a>
-                    </li>
-                    <li class="nav-item">
-                      <a class="nav-link" href="./About.html">About me</a>
-                    </li>
-                    <li class="nav-item">
-                      <a class="nav-link" href="./travel.html">Travel Tips</a>
-                    </li>
-                    <li class="nav-item">
-                      <a class="nav-link" href="./gallery.html">Gallery</a>
-                    </li>
-                    <li class="nav-item">
-                      <a class="nav-link" href="./contact.html">Contacts</a>
-                    </li>
-                  </ul>
-              </div>
-        </div>
-      </nav>
-      <!--BS Navbar End-->
-    </header>
+  <header>
+    <!--BS Navbar Start-->
+    <nav class="navbar navbar-expand-sm navbar-expand-lg">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="#">
+          <img style="height: 50px;" src="../Assets/Media/MerLogoB.png" alt="logo"/>
+        </a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#collapsibleNavbar">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+      </div>
+      <div class="container-fluid">
+          <div class="collapse navbar-collapse" id="collapsibleNavbar">
+              <ul class="navbar-nav">
+                  <li class="nav-item">
+                    <a class="nav-link" href="../index.html">Home</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="./About.html">About me</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="./travel.html">Travel Tips</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="./gallery.html">Gallery</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="./contact.html">Contacts</a>
+                  </li>
+                </ul>
+            </div>
+      </div>
+    </nav>
+    <!--BS Navbar End-->
+  </header>
     <br>
     <main class="body">
         <section class="galeria">
@@ -84,21 +84,24 @@
         </section>
     </main>
     <!-------Footer Start------->
-
-    <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
-      <div class="col-md-4 d-flex align-items-center">
-        <a href="/" class="mb-3 me-2 mb-md-0 text-body-secondary text-decoration-none lh-1">
-          <img src="../Assets/Media/MercyFooter.png" alt="">
-        </a>
-        <span class="mb-3 mb-md-0 text-body-secondary">© 2023 All rights reserved</span>
+    <footer>
+      <div class="container-fluid footer">
+        <div class="row justify-content-center">
+          <div class="col-3 col-sm-3 col-md-3 col-lg-3">
+            <img class="align-self-center" src="./Assets/Media/MercyFooter.png" alt="">
+          </div>
+          <div class="col-6 col-sm-6 col-md-6 col-lg-6 align-self-center">
+            © 2023 All rights reserved
+          </div>
+          <div class="col-3 col-sm-3 col-md-3 col-lg-3 align-self-center">
+            <a class="text-body-secondary" href="https://www.instagram.com/mercymolano?utm_source=qr" target="_blank"> <i class="fa-brands fa-instagram fa-beat"></i></a>
+            <a class="text-body-secondary" href="https://wa.link/ycoea4" target="_blank"><i class="fa-brands fa-whatsapp fa-beat"></i></a>
+            <a class="text-body-secondary" href="https://co.linkedin.com/in/mercymoreno" target="_blank"><i class="fa-brands fa-linkedin fa-beat"></i></a>
+          </div>
+        </div>
       </div>
-      <ul class="nav col-md-4 justify-content-end list-unstyled d-flex">
-        <li class="ms-3"><a class="text-body-secondary" href="https://www.instagram.com/mercymolano?utm_source=qr" target="_blank"> <i class="fa-brands fa-instagram fa-beat"></i></a></li>
-        <li class="ms-3"><a class="text-body-secondary" href="https://wa.link/ycoea4" target="_blank"><i class="fa-brands fa-whatsapp fa-beat"></i></a></li>
-        <li class="ms-3"><a class="text-body-secondary" href="https://co.linkedin.com/in/mercymoreno" target="_blank"><i class="fa-brands fa-linkedin fa-beat"></i></a></li>
-      </ul>
     </footer>
-    <!-- Footer End -->
+    <!-------Footer End------->
     <a href="#" class="up"><i class="fa-solid fa-angle-up"></i></a>
 
     <!--Scripts BS Start-->
