--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
     <!-- SEO Position Description Start -->
     <meta
       name="description"
-      content="Explore exotic destinations, travel tips, and captivating stories on our adventurous travel blog. Embark on a journey of discovery with our expert guides!"
-    />
+      content="Explore exotic destinations, travel tips, and captivating stories on our adventurous travel blog. Embark on a journey of discovery with our expert guides!"/>
     <!-- SEO Position Description End -->
     <!-- Title -->
     <title>Mercy Mo</title>
@@ -15,35 +14,31 @@
     <link
       rel="shortcut icon"
       href="./Assets/Media/Mercy.png"
-      type="image/x-icon"
-    />
+      type="image/x-icon"/>
     <!--BS 5.3 Start-->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9"
-      crossorigin="anonymous"
-    />
+      crossorigin="anonymous"/>
     <!-- CSS -->
     <link rel="stylesheet" type="text/css" href="./Assets/CSS/styles.css" />
     <!-- The hamburger menu for small screens -->
     <link
       rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
-    />
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"/>
     <!-- Icons -->
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
       integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
       crossorigin="anonymous"
-      referrerpolicy="no-referrer"
-    />
+      referrerpolicy="no-referrer"/>
   </head>
   <body>
     <header>
       <!--BS Navbar Start-->
-      <nav class="navbar navbar-expand-sm navbar-expand-lg">
+      <nav class="navbar navbar-expand-lg">
         <div class="container-fluid">
           <a class="navbar-brand" href="#">
             <img style="height: 50px;" src="./Assets/Media/MerLogoB.png" alt="logo"/>
@@ -87,21 +82,15 @@
           <div class="container">
             <div class="row">
               <div class="col-md-8 col-sm-12">
-                <div class="banner-text">
-                  <h2 class="white">Hi! I'm Lorem ipsum the Traveler</h2>
-                  <p class="banner-text white">
+                <div class="banner-content">
+                  <h2 class="banner-title">Hi! I'm Lorem ipsum the Traveler</h2>
+                  <p class="banner-text">
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit.
                     Curabitur hendrerit neque massa, sit amet tristique ante
                     porta ut. In sodales et justo vel vulputate. Pellentesque
                     habitant morbi tristique senectus et netus et malesuada
                     fames ac turpis egestas.
                   </p>
-                  <ul>
-                    <li>
-                      <a href="./Pages/About.html"
-                        >MY STORY</a>
-                    </li>
-                  </ul>
                 </div>
               </div>
               <div class="col-md-4 col-sm-12">
@@ -117,28 +106,28 @@
           <img class="svg-hero" src="./Assets/Media/wave.svg" />
         </span>
       </section>
-
       <!-------Banner End------->
-
       <!-------About End------->
-
       <section class="about section-padding prelative about-section1" id="about">
         <div>
+          <div class="sectioner-header text-center">
+            <h2 id="about"><a href="./Pages/About.html">About Me</a></h2>
+            <span class="line"></span>
+          </div>
             <img src="./Assets/Media/Mercy.png" style="filter:sepia(60%)" class="profile-img about-section1--img">
             <h1>Hi, I'm Mo the Traveler.</h1>
-            <h3 id="sec1-button"><a href="./Pages/About.html">My Story</a></h3>
-            <p class="sec1-text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptates exercitationem
-                deleniti quo est
-                nihil? Deserunt assumenda maxime maiores expedita ducimus corporis unde facilis similique mollitia nisi.
-                Sit quos similique magni?</p>
+            <h2 id="about"><a href="./Pages/About.html">My Story</a></h2>
+            <p class="about-text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptates exercitationem deleniti quo est nihil? Deserunt assumenda maxime maiores expedita ducimus corporis unde facilis similique mollitia nisi. Sit quos similique magni?</p>
         </div>
       </section>
       <!-------About End------->
-
       <!-------Travel Tips Start------->
-      <section class="video-section prelative text-center white" id="tips">
-        <h2 >Travel Tips</h2>
+      <section class="travel prelative text-center" id="tips">        
         <div class="section-padding video-overlay">
+          <div class="sectioner-header text-center">
+            <h2 id="travel"><a href="./Pages/travel.html">Travel Tips</a></h2>
+            <span class="line"></span>
+          </div>
           <div class="container">
             <div class="sec2-travel-video">
                 <a href="./Pages/travel.html"><video id="sec2-travel-vid-tip1" src="./Assets/Media/Prague.MP4" autoplay loop
@@ -176,13 +165,11 @@
         </div>
       </section>
       <!-------Travel Tips End------->
-
-<!-------Gallery Start------->
-<section class="feature section-padding sec3-gallery" id="gallery">
-<div class="sectioner-header">
-  <h2 id="sec3"><a href="./Pages/gallery.html">Gallery</a></h2>
-</div>
-    
+      <!-------Gallery Start------->
+      <section class="section-padding" id="gallery">
+        <div class="sectioner-header text-center">
+          <h2 id="sec3"><a href="./Pages/gallery.html">Gallery</a></h2>
+        </div>  
         <!-- Complete Carousel Start -->
         <div id="galleryC" class="carousel slide" data-bs-ride="carousel">
             <!-- Dash Start -->
@@ -194,7 +181,6 @@
                 <button type="button" data-bs-target="#galleryC" data-bs-slide-to="4"></button>
                 <button type="button" data-bs-target="#galleryC" data-bs-slide-to="5"></button>
                 <button type="button" data-bs-target="#galleryC" data-bs-slide-to="6"></button>
-
             </div>
             <!-- Dash End -->
             <!-- carousel Images Start-->
@@ -208,25 +194,21 @@
                     <div class="d-flex justify-content-center">
                         <img src="./Assets/Media/Rest.jpeg" alt="Bogotá">
                     </div>
-
                 </div>
                 <div class="carousel-item">
                     <div class="d-flex justify-content-center">
                         <img src="./Assets/Media/People.JPG" alt="Bogotá">
                     </div>
-
                 </div>
                 <div class="carousel-item">
                     <div class="d-flex justify-content-center">
                         <img src="./Assets/Media/monument.png" alt="Bogotá">
                     </div>
-
                 </div>
                 <div class="carousel-item">
                     <div class="d-flex justify-content-center">
                         <img src="./Assets/Media/Mer.png" alt="Bogotá">
                     </div>
-
                 </div>
                 <div class="carousel-item">
                     <div class="d-flex justify-content-center">
@@ -249,11 +231,9 @@
             </button>
             <!-- Left and right controls -->
         </div>
-        <!-- Complete Carousel Start -->
-  </section>
-  
-  <!-------Gallery End------->
-
+        <!-- Complete Carousel End-->
+      </section>
+      <!-------Gallery End------->
       <!-------Contact Start------->
       <section class="contact section-padding" data-scroll-index="6">
         <div class="container">
@@ -271,105 +251,62 @@
               <div class="section-content">
                 <div class="row">
                   <div class="col-sm-12 col-md-12 col-lg-8">
-                    <form id="contact_form" action="">
-                      <!-- Name input -->
-                      <div class="mb-3">
-                        <label class="form-label" for="name">Name</label>
-                        <input
-                          class="form-control"
-                          id="name"
-                          type="text"
-                          placeholder="Name"
-                          data-sb-validations="required"
-                        />
-                        <div
-                          class="invalid-feedback"
-                          data-sb-feedback="name:required"
-                        >
-                          Name is required.
-                        </div>
-                      </div>
+            <!-- Bootstrap 5 starter form -->
+            <form id="contactForm" method="post" action="">
 
-                      <!-- Email address input -->
-                      <div class="mb-3">
-                        <label class="form-label" for="emailAddress"
-                          >Email Address</label
-                        >
-                        <input
-                          class="form-control"
-                          id="emailAddress"
-                          type="email"
-                          placeholder="Email Address"
-                          data-sb-validations="required, email"
-                        />
-                        <div
-                          class="invalid-feedback"
-                          data-sb-feedback="emailAddress:required"
-                        >
-                          Email Address is required.
-                        </div>
-                        <div
-                          class="invalid-feedback"
-                          data-sb-feedback="emailAddress:email"
-                        >
-                          Email Address Email is not valid.
-                        </div>
-                      </div>
+              <!-- Name input -->
+              <div class="mb-3">
+                  <label class="form-label" for="name">Name</label>
+                  <input class="form-control" id="name" type="text" placeholder="Name"
+                      data-sb-validations="required" />
+                  <div class="invalid-feedback" data-sb-feedback="name:required">Name is required.</div>
+              </div>
 
-                      <!-- Message input -->
-                      <div class="mb-3">
-                        <label class="form-label" for="message">Message</label>
-                        <textarea
-                          class="form-control"
-                          id="message"
-                          type="text"
-                          placeholder="Message"
-                          style="height: 10rem"
-                          data-sb-validations="required"
-                        ></textarea>
-                        <div
-                          class="invalid-feedback"
-                          data-sb-feedback="message:required"
-                        >
-                          Message is required.
-                        </div>
-                      </div>
+              <!-- Email address input -->
+              <div class="mb-3">
+                  <label class="form-label" for="emailAddress">Email Address</label>
+                  <input class="form-control" id="emailAddress" type="email" placeholder="Email Address"
+                      data-sb-validations="required, email" />
+                  <div class="invalid-feedback" data-sb-feedback="emailAddress:required">Email Address is required.
+                  </div>
+                  <div class="invalid-feedback" data-sb-feedback="emailAddress:email">Email Address Email is not
+                      valid.</div>
+              </div>
 
-                      <!-- Form submissions success message -->
-                      <div class="d-none" id="submitSuccessMessage">
-                        <div class="text-center mb-3">
-                          Form submission successful!
-                        </div>
-                      </div>
+              <!-- Message input -->
+              <div class="mb-3">
+                  <label class="form-label" for="message">Message</label>
+                  <textarea class="form-control" id="message" type="text" placeholder="Message" style="height: 10rem;"
+                      data-sb-validations="required"></textarea>
+                  <div class="invalid-feedback" data-sb-feedback="message:required">Message is required.</div>
+              </div>
 
-                      <!-- Form submissions error message -->
-                      <div class="d-none" id="submitErrorMessage">
-                        <div class="text-center text-danger mb-3">
-                          Error sending message!
-                        </div>
-                      </div>
+              <!-- Form submissions success message -->
+              <div class="d-none" id="submitSuccessMessage">
+                  <div class="text-center mb-3">Form submission successful!</div>
+              </div>
 
-                      <!-- Form submit button -->
-                      <div class="d-grid">
-                        <button
-                          class="btn btn-primary btn-lg"
-                          id="submitButton"
-                          type="submit"
-                        >
-                          Submit
-                        </button>
-                      </div>
-                    </form>
+              <!-- Form submissions error message -->
+              <div class="d-none" id="submitErrorMessage">
+                  <div class="text-center text-danger mb-3">Error sending message!</div>
+              </div>
+
+              <!-- Form submit button -->
+              <div class="d-grid">
+                  <button class="btn btn-primary btn-lg" id="submitButton" type="submit">Submit</button>
+              </div>
+
+          </form>
                   </div>
                   <div class="col-sm-12 col-md-12 col-lg-4">
-                    <div class="contact-info white">
+                    <div class="contact-info">
                       <div class="contact-item media">
                         <i
                           class="fa fa-map-marker-alt media-left media-right-margin"
                         ></i>
                         <div class="media-body">
                           <p class="text-uppercase">Address</p>
-                          <p class="text-uppercase">New Delhi, India</p>
+                          <p class="text-uppercase">Bogotá, Colombia</p>
                         </div>
                       </div>
                       <div class="contact-item media">
@@ -379,23 +316,21 @@
                         <div class="media-body">
                           <p class="text-uppercase">Phone</p>
                           <p class="text-uppercase">
-                            <a class="text-white" href="tel:+15173977100"
-                              >009900990099</a
+                            <a class="text-white" href="tel:+573145055932"
+                              >+57 3140000000</a
                             >
                           </p>
                         </div>
                       </div>
                       <div class="contact-item media">
-                        <i
-                          class="fa fa-envelope media-left media-right-margin"
-                        ></i>
+                        <i class="fa fa-envelope media-left media-right-margin"></i>
                         <div class="media-body">
                           <p class="text-uppercase">E-mail</p>
                           <p class="text-uppercase">
                             <a
                               class="text-white"
                               href="mailto:abcdefg@gmail.com"
-                              >yogeshsingh.now@gmail.com</a
+                              >myemail.now@gmail.com</a
                             >
                           </p>
                         </div>
@@ -418,39 +353,41 @@
             </div>
           </div>
         </div>
-      </section><!-------Contact End------->
+      </section>
+      <!-------Contact End------->
     </main>
-
     <!-------Footer Start------->
-
-    <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
-      <div class="col-md-4 d-flex align-items-center">
-        <a href="/" class="mb-3 me-2 mb-md-0 text-body-secondary text-decoration-none lh-1">
-          <img src="./Assets/Media/MercyFooter.png" alt="">
-        </a>
-        <span class="mb-3 mb-md-0 text-body-secondary">© 2023 All rights reserved</span>
+    <footer>
+      <div class="container-fluid footer">
+        <div class="row justify-content-center">
+          <div class="col-3 col-sm-3 col-md-3 col-lg-3">
+            <img class="align-self-center" src="./Assets/Media/MercyFooter.png" alt="">
+          </div>
+          <div class="col-6 col-sm-6 col-md-6 col-lg-6 align-self-center">
+            © 2023 All rights reserved
+          </div>
+          <div class="col-3 col-sm-3 col-md-3 col-lg-3 align-self-center">
+            <a class="text-body-secondary" href="https://www.instagram.com/mercymolano?utm_source=qr" target="_blank"> <i class="fa-brands fa-instagram fa-beat"></i></a>
+            <a class="text-body-secondary" href="https://wa.link/ycoea4" target="_blank"><i class="fa-brands fa-whatsapp fa-beat"></i></a>
+            <a class="text-body-secondary" href="https://co.linkedin.com/in/mercymoreno" target="_blank"><i class="fa-brands fa-linkedin fa-beat"></i></a>
+          </div>
+        </div>
       </div>
-      <ul class="nav col-md-4 justify-content-end list-unstyled d-flex">
-        <li class="ms-3"><a class="text-body-secondary" href="https://www.instagram.com/mercymolano?utm_source=qr" target="_blank"> <i class="fa-brands fa-instagram fa-beat"></i></a></li>
-        <li class="ms-3"><a class="text-body-secondary" href="https://wa.link/ycoea4" target="_blank"><i class="fa-brands fa-whatsapp fa-beat"></i></a></li>
-        <li class="ms-3"><a class="text-body-secondary" href="https://co.linkedin.com/in/mercymoreno" target="_blank"><i class="fa-brands fa-linkedin fa-beat"></i></a></li>
-      </ul>
     </footer>
-    <!-- Footer End -->
+    <!-------Footer End------->
     <!--GO BACK UP BUTTON-->
     <a href="#" class="up"><i class="fa-solid fa-angle-up"></i></a>
-
     <!--Scripts BS Start-->
     <script
       src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
       integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
-      crossorigin="anonymous"
-    ></script>
+      crossorigin="anonymous">
+    </script>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.min.js"
       integrity="sha384-Rx+T1VzGupg4BHQYs2gCW9It+akI2MM/mndMCy36UVfodzcJcF0GGLxZIzObiEfa"
-      crossorigin="anonymous"
-    ></script>
+      crossorigin="anonymous">
+    </script>
     <!-- SB Forms JS for contact card -->
     <script src="https://cdn.startbootstrap.com/sb-forms-latest.js"></script>
     <!--Scripts BS End-->
