--- a/index.html
+++ b/index.html
@@ -169,6 +169,7 @@
       <section class="section-padding" id="gallery">
         <div class="sectioner-header text-center">
           <h2 id="sec3"><a href="./Pages/gallery.html">Gallery</a></h2>
+          <span class="line"></span>
         </div>  
         <!-- Complete Carousel Start -->
         <div id="galleryC" class="carousel slide" data-bs-ride="carousel">
